crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_annotated_declarations.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@Deprecated("use new")
@get:Synchronized
class Legacy {
    @setparam:Inject var name: String = ""
}

TOKENS:
AT "@"
IDENTIFIER "Deprecated"
L_PAREN "("
OPEN_QUOTE "\""
STRING_CONTENT "use new"
CLOSE_QUOTE "\""
R_PAREN ")"
NEWLINE "\n"
AT "@"
IDENTIFIER "get"
COLON ":"
IDENTIFIER "Synchronized"
NEWLINE "\n"
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Legacy"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
AT "@"
IDENTIFIER "setparam"
COLON ":"
IDENTIFIER "Inject"
WHITESPACE " "
VAR_KW "var"
WHITESPACE " "
IDENTIFIER "name"
COLON ":"
WHITESPACE " "
IDENTIFIER "String"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_QUOTE "\""
CLOSE_QUOTE "\""
NEWLINE "\n"
R_BRACE "}"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..101
  IMPORT_LIST@0..0
  CLASS_DECL@0..100
    MODIFIER_LIST@0..41
      ANNOTATION@0..23
        AT@0..1 "@"
        USER_TYPE@1..11
          IDENTIFIER@1..11 "Deprecated"
        VALUE_ARGUMENTS@11..22
          L_PAREN@11..12 "("
          VALUE_ARGUMENT@12..21
            STRING_LITERAL@12..21
              OPEN_QUOTE@12..13 "\""
              STRING_CONTENT@13..20 "use new"
              CLOSE_QUOTE@20..21 "\""
          R_PAREN@21..22 ")"
        NEWLINE@22..23 "\n"
      ANNOTATION@23..41
        AT@23..24 "@"
        ANNOTATION_USE_SITE_TARGET@24..28
          IDENTIFIER@24..27 "get"
          COLON@27..28 ":"
        USER_TYPE@28..41
          IDENTIFIER@28..40 "Synchronized"
          NEWLINE@40..41 "\n"
    CLASS_KW@41..46 "class"
    WHITESPACE@46..47 " "
    IDENTIFIER@47..53 "Legacy"
    WHITESPACE@53..54 " "
    CLASS_BODY@54..100
      L_BRACE@54..55 "{"
      NEWLINE@55..56 "\n"
      WHITESPACE@56..60 "    "
      PROPERTY_DECL@60..99
        MODIFIER_LIST@60..76
          ANNOTATION@60..76
            AT@60..61 "@"
            ANNOTATION_USE_SITE_TARGET@61..70
              IDENTIFIER@61..69 "setparam"
              COLON@69..70 ":"
            USER_TYPE@70..76
              IDENTIFIER@70..76 "Inject"
        WHITESPACE@76..77 " "
        VAR_KW@77..80 "var"
        WHITESPACE@80..81 " "
        VARIABLE_DECLARATION@81..93
          IDENTIFIER@81..85 "name"
          COLON@85..86 ":"
          WHITESPACE@86..87 " "
          TYPE@87..93
            USER_TYPE@87..93
              IDENTIFIER@87..93 "String"
        WHITESPACE@93..94 " "
        EQUAL@94..95 "="
        WHITESPACE@95..96 " "
        STRING_LITERAL@96..98
          OPEN_QUOTE@96..97 "\""
          CLOSE_QUOTE@97..98 "\""
        NEWLINE@98..99 "\n"
      R_BRACE@99..100 "}"
  NEWLINE@100..101 "\n"
