crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_assignable_destinations.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
fun f(a: Int, arr: IntArray, p: P, flag: Boolean) {
    this.field = 1
    p.field = 1
    arr[0] = 1
    (p).field = 1
    p!!.field = 1
    make().field = 1
    !flag += 1
    a!! += 1
}

TOKENS:
FUN_KW "fun"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
IDENTIFIER "a"
COLON ":"
WHITESPACE " "
IDENTIFIER "Int"
COMMA ","
WHITESPACE " "
IDENTIFIER "arr"
COLON ":"
WHITESPACE " "
IDENTIFIER "IntArray"
COMMA ","
WHITESPACE " "
IDENTIFIER "p"
COLON ":"
WHITESPACE " "
IDENTIFIER "P"
COMMA ","
WHITESPACE " "
IDENTIFIER "flag"
COLON ":"
WHITESPACE " "
IDENTIFIER "Boolean"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
THIS_KW "this"
DOT "."
IDENTIFIER "field"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
IDENTIFIER "p"
DOT "."
IDENTIFIER "field"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
IDENTIFIER "arr"
L_BRACKET "["
INTEGER_LITERAL "0"
R_BRACKET "]"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
L_PAREN "("
IDENTIFIER "p"
R_PAREN ")"
DOT "."
IDENTIFIER "field"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
IDENTIFIER "p"
NOT_NULL_ASSERT "!!"
DOT "."
IDENTIFIER "field"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
IDENTIFIER "make"
L_PAREN "("
R_PAREN ")"
DOT "."
IDENTIFIER "field"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
NOT "!"
IDENTIFIER "flag"
WHITESPACE " "
PLUS_EQUAL "+="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
IDENTIFIER "a"
NOT_NULL_ASSERT "!!"
WHITESPACE " "
PLUS_EQUAL "+="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
R_BRACE "}"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..189
  IMPORT_LIST@0..0
  FUNCTION_DECL@0..188
    FUN_KW@0..3 "fun"
    WHITESPACE@3..4 " "
    IDENTIFIER@4..5 "f"
    VALUE_PARAMETERS@5..49
      L_PAREN@5..6 "("
      VALUE_PARAMETER@6..12
        IDENTIFIER@6..7 "a"
        COLON@7..8 ":"
        WHITESPACE@8..9 " "
        TYPE@9..12
          USER_TYPE@9..12
            IDENTIFIER@9..12 "Int"
      COMMA@12..13 ","
      WHITESPACE@13..14 " "
      VALUE_PARAMETER@14..27
        IDENTIFIER@14..17 "arr"
        COLON@17..18 ":"
        WHITESPACE@18..19 " "
        TYPE@19..27
          USER_TYPE@19..27
            IDENTIFIER@19..27 "IntArray"
      COMMA@27..28 ","
      WHITESPACE@28..29 " "
      VALUE_PARAMETER@29..33
        IDENTIFIER@29..30 "p"
        COLON@30..31 ":"
        WHITESPACE@31..32 " "
        TYPE@32..33
          USER_TYPE@32..33
            IDENTIFIER@32..33 "P"
      COMMA@33..34 ","
      WHITESPACE@34..35 " "
      VALUE_PARAMETER@35..48
        IDENTIFIER@35..39 "flag"
        COLON@39..40 ":"
        WHITESPACE@40..41 " "
        TYPE@41..48
          USER_TYPE@41..48
            IDENTIFIER@41..48 "Boolean"
      R_PAREN@48..49 ")"
    WHITESPACE@49..50 " "
    BLOCK@50..188
      L_BRACE@50..51 "{"
      NEWLINE@51..52 "\n"
      WHITESPACE@52..56 "    "
      ASSIGNMENT_STATEMENT@56..70
        POSTFIX_UNARY_EXPRESSION@56..66
          THIS_EXPRESSION@56..60
            THIS_KW@56..60 "this"
          NAVIGATION_SUFFIX@60..66
            DOT@60..61 "."
            IDENTIFIER@61..66 "field"
        WHITESPACE@66..67 " "
        EQUAL@67..68 "="
        WHITESPACE@68..69 " "
        PRIMARY_EXPRESSION@69..70
          INTEGER_LITERAL@69..70 "1"
      NEWLINE@70..71 "\n"
      WHITESPACE@71..75 "    "
      ASSIGNMENT_STATEMENT@75..86
        POSTFIX_UNARY_EXPRESSION@75..82
          PRIMARY_EXPRESSION@75..76
            IDENTIFIER@75..76 "p"
          NAVIGATION_SUFFIX@76..82
            DOT@76..77 "."
            IDENTIFIER@77..82 "field"
        WHITESPACE@82..83 " "
        EQUAL@83..84 "="
        WHITESPACE@84..85 " "
        PRIMARY_EXPRESSION@85..86
          INTEGER_LITERAL@85..86 "1"
      NEWLINE@86..87 "\n"
      WHITESPACE@87..91 "    "
      ASSIGNMENT_STATEMENT@91..101
        POSTFIX_UNARY_EXPRESSION@91..97
          PRIMARY_EXPRESSION@91..94
            IDENTIFIER@91..94 "arr"
          INDEXING_EXPRESSION@94..97
            L_BRACKET@94..95 "["
            PRIMARY_EXPRESSION@95..96
              INTEGER_LITERAL@95..96 "0"
            R_BRACKET@96..97 "]"
        WHITESPACE@97..98 " "
        EQUAL@98..99 "="
        WHITESPACE@99..100 " "
        PRIMARY_EXPRESSION@100..101
          INTEGER_LITERAL@100..101 "1"
      NEWLINE@101..102 "\n"
      WHITESPACE@102..106 "    "
      ASSIGNMENT_STATEMENT@106..119
        POSTFIX_UNARY_EXPRESSION@106..115
          PARENTHESIZED_EXPRESSION@106..109
            L_PAREN@106..107 "("
            PRIMARY_EXPRESSION@107..108
              IDENTIFIER@107..108 "p"
            R_PAREN@108..109 ")"
          NAVIGATION_SUFFIX@109..115
            DOT@109..110 "."
            IDENTIFIER@110..115 "field"
        WHITESPACE@115..116 " "
        EQUAL@116..117 "="
        WHITESPACE@117..118 " "
        PRIMARY_EXPRESSION@118..119
          INTEGER_LITERAL@118..119 "1"
      NEWLINE@119..120 "\n"
      WHITESPACE@120..124 "    "
      ASSIGNMENT_STATEMENT@124..137
        POSTFIX_UNARY_EXPRESSION@124..133
          PRIMARY_EXPRESSION@124..125
            IDENTIFIER@124..125 "p"
          NOT_NULL_ASSERT@125..127 "!!"
          NAVIGATION_SUFFIX@127..133
            DOT@127..128 "."
            IDENTIFIER@128..133 "field"
        WHITESPACE@133..134 " "
        EQUAL@134..135 "="
        WHITESPACE@135..136 " "
        PRIMARY_EXPRESSION@136..137
          INTEGER_LITERAL@136..137 "1"
      NEWLINE@137..138 "\n"
      WHITESPACE@138..142 "    "
      ASSIGNMENT_STATEMENT@142..158
        POSTFIX_UNARY_EXPRESSION@142..154
          PRIMARY_EXPRESSION@142..146
            IDENTIFIER@142..146 "make"
          CALL_EXPRESSION@146..148
            VALUE_ARGUMENTS@146..148
              L_PAREN@146..147 "("
              R_PAREN@147..148 ")"
          NAVIGATION_SUFFIX@148..154
            DOT@148..149 "."
            IDENTIFIER@149..154 "field"
        WHITESPACE@154..155 " "
        EQUAL@155..156 "="
        WHITESPACE@156..157 " "
        PRIMARY_EXPRESSION@157..158
          INTEGER_LITERAL@157..158 "1"
      NEWLINE@158..159 "\n"
      WHITESPACE@159..163 "    "
      ASSIGNMENT_STATEMENT@163..173
        PREFIX_UNARY_EXPRESSION@163..168
          NOT@163..164 "!"
          PRIMARY_EXPRESSION@164..168
            IDENTIFIER@164..168 "flag"
        WHITESPACE@168..169 " "
        PLUS_EQUAL@169..171 "+="
        WHITESPACE@171..172 " "
        PRIMARY_EXPRESSION@172..173
          INTEGER_LITERAL@172..173 "1"
      NEWLINE@173..174 "\n"
      WHITESPACE@174..178 "    "
      ASSIGNMENT_STATEMENT@178..186
        POSTFIX_UNARY_EXPRESSION@178..181
          PRIMARY_EXPRESSION@178..179
            IDENTIFIER@178..179 "a"
          NOT_NULL_ASSERT@179..181 "!!"
        WHITESPACE@181..182 " "
        PLUS_EQUAL@182..184 "+="
        WHITESPACE@184..185 " "
        PRIMARY_EXPRESSION@185..186
          INTEGER_LITERAL@185..186 "1"
      NEWLINE@186..187 "\n"
      R_BRACE@187..188 "}"
  NEWLINE@188..189 "\n"
